# shutter

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
examples/: dbscan.html  dbscan.md  patch.md  segmentation.rh
off/: default_7903060512077742190_0.profraw  default_7903060521741418606_0.profraw  default_7903061608368144494_0.profraw  default_7903488255398477934_0.profraw  default_7903765393549787246_0.profraw  default_7903765396771012718_0.profraw  default_7903812677920587886_0.profraw  default_7904399929916751982_0.profraw  default_7904966249286697070_0.profraw  default_7904987141082415214_0.profraw  default_7906818262943375470_0.profraw  default_7907033837030318190_0.profraw  default_7907041533611712622_0.profraw  default_7907087809735788654_0.profraw  default_7907234056601831534_0.profraw
scripts/: build.sh  shutter.py
src/: ann.rs  bitonal.rs  camshift.rs  code.rs  conv.rs  convert.rs  dct.rs  descriptor.rs  detection.rs  draw.rs  edge.rs  export.rs  filter.rs  flow.rs  geom.rs  graph.rs  hist.rs  hough.rs  lib.rs  matching.rs  morphology.rs  norm.rs  parallel.rs  path.rs  polar.rs  processor.rs  pyr.rs  raster.rs  resample.rs  resize.rs  scalar.rs  search.rs  sparse.rs  template.rs  threshold.rs  tracking.rs  transform.rs  util.rs
src/binary/: mod.rs
src/calib/: mod.rs
src/cluster/: hikm.rs  kmeans.rs  mod.rs
src/color/: mod.rs
src/contour/: mod.rs
src/corner/: mod.rs
src/edge/: mod.rs
src/feature/: mod.rs
src/feature/color/: mod.rs
src/feature/color/segmentation/: mod.rs
src/feature/corner/: mod.rs
src/feature/edge/: mod.rs
src/feature/patch/: fgmm.rs  mod.rs
src/feature/patch/segmentation/: density.rs  edge.rs  mod.rs  raster.rs  ray.rs  seed.rs
src/feature/point/: dbscan.rs  mod.rs
src/feature/shape/: mod.rs
src/ffi/: mod.rs
src/filter/: mod.rs
src/flow/: mod.rs
src/foreign/: mod.rs
src/foreign/ipp/: ippcc.rs  ippcore.rs  ippcv.rs  ippi.rs  ipps.rs  mod.rs
src/foreign/vlfeat/: generic.rs  hikmeans.rs  mod.rs
src/geom/: mod.rs
src/global/: mod.rs
src/gray/: mod.rs
src/histogram/: mod.rs
src/image/: convert.rs  copy.rs  cvutils.rs  draw.rs  index.rs  interp.rs  ipp.rs  ipputils.rs  iter.rs  mod.rs  pgm.rs
src/image/dwt/: ipp.rs  iter.rs  mod.rs
src/image/fft/: mod.rs
src/integral/: mod.rs
src/io/: mod.rs  pgm.rs  png.rs
src/local/: mod.rs
src/morph/: mod.rs
src/morphology/: mod.rs
src/motion/: mod.rs  mosse.rs  phase.rs
src/object/: mod.rs
src/ops/: mod.rs
src/optics/: mod.rs
src/patch/: density.rs  mod.rs  pattern.rs  quadtree.rs  raster.rs  ray.rs  seed.rs  segm.rs  segmentation.rs
src/point/: mod.rs
src/profile/: mod.rs
src/raster/: mod.rs
src/region/: mod.rs
src/region/raster/: mod.rs
src/scalar/: mod.rs
src/segmentation/: fgmm.rs  mod.rs  mser.rs  patch.rs
src/shape/: edge.rs  ellipse.rs  hough.rs  mod.rs  point.rs  rect.rs
src/stat/: mod.rs
src/texture/: mod.rs
src/warp/: mod.rs
tests/: run.sh  test.rs  tests.sql
