[package]
name = "shutter"
version = "0.0.1"
authors = ["Diego Lima <lima.ds@outlook.com>"]
edition = "2018"
license = "MIT"
keywords = ["image"]
categories = ["science"]
build = "build.rs"
publish = ["crates-io"]
readme = "README.md"
description = "Image processing data structures and algorithms"

[lib]
name = "shutter"
crate-type = ["rlib", "cdylib"]

[dependencies]
nalgebra = { version = "0.31.0", features = ["serde-serialize", "sparse"] }
simba="0.7.1"
num-traits = "0.2.14"
serde = { version = "1.0.111", features=["derive"] }
serde_json = "1.0.55"
# opencv = { version = "0.53.0" }
opencv = { version = "0.53.0", features=["clang-runtime"], optional=true }

# gstreamer-app = { version = "0.17.0" }
# rustdct = "0.7.0"
# rustfft = "0.7.0"

gstreamer = { version = "0.17.0", optional=true }
gstreamer-base = {version = "0.17.0", optional=true }
gstreamer-video = { version="0.17.0", optional=true }
glib = { version="0.14.2", optional = true }

# gstreamer-gl = { version = "0.17.0" }
# anyhow = "1.0.38"
once_cell = { version = "1.5.2", optional = true }
# lazy_static = "1.0"
# structopt = "0.3"
ripple = { path = "../ripple" }
# away = { path = "../away" }
bayes = { path = "../bayes" }
itertools = "0.10.1"
parry2d="0.9.0"
base64 = "0.13.0"
image = "0.23.14"
# showable = { path = "../showable" }
# deft = { path = "../deft" }
# rhai =  { path = "/home/diego/Downloads/rhai", features = ["sync", "metadata", "internals"] }
# rhai = { version = "1.3.0", features = ["sync", "metadata", "internals"] }
tempfile = "*"
# mlua = { version = "0.7.3", features = ["lua54", "serialize", "module"], optional=true }
# smartstring = { version = "0.2.7", default-features = false }
# packed_simd = "0.3.3"
# nohash-hasher = "0.2.0"
# R-tree data structure.
# spade = "1.8.2"
petgraph = { version = "0.6.0", default-features = false }

# euclid = "0.22.6"

[features]
mkl=[]
gsl=[]
ipp=[]
# opencvlib=[]
vlfeatlib=[]
# processor=[]

[package.metadata]
numerics = "scripts/shutter.lua"
