[package]
name = "shutter"
version = "0.0.1"
authors = ["Diego Lima <lima.ds@outlook.com>"]
edition = "2018"
license = "MIT"
keywords = ["image"]
categories = ["science"]
build = "build.rs"
publish = ["crates-io"]
readme = "README.md"
description = "Image processing data structures and algorithms"

[lib]
name = "shutter"
crate-type = ["rlib", "cdylib"]

[dependencies]
approx = { version = "0.5" }
nalgebra = { version = "0.31.0", features = ["serde-serialize", "sparse"] }
nalgebra-lapack = { version = "0.22.0" }
simba= { version = "0.7.1", features = ["wide"] }
num-traits = "0.2.14"
serde = { version = "1.0.111", features=["derive"] }
serde_json = "1.0.55"
# opencv = { version = "0.53.0" }
# opencv = { version = "0.77.0", optional=true }
bumpalo = { version = "3.10.0", features=["collections"] }
# packed_simd = { version = "0.3.8", package = "packed_simd_2" }
wide = "0.7.5"
rhai = { version = "1.12" }
tuples = "1.6.0"
either="1.0"
statrs="0.16.0"
# gstreamer-app = { version = "0.17.0" }
# rustdct = "0.7.0"
# rustfft = "0.7.0"

# gstreamer-gl = { version = "0.17.0" }
# anyhow = "1.0.38"
once_cell = { version = "1.5.2", optional = true }
# lazy_static = "1.0"
# structopt = "0.3"
ripple = { path = "../ripple" }
# away = { path = "../away" }
bayes = { path = "../bayes" }
itertools = "0.10.1"
parry2d="0.9.0"
base64 = "0.13.0"
image = "0.23.14"
# showable = { path = "../showable" }
# deft = { path = "../deft" }
# rhai =  { path = "/home/diego/Downloads/rhai", features = ["sync", "metadata", "internals"] }
# rhai = { version = "1.3.0", features = ["sync", "metadata", "internals"] }
tempfile = "*"
# mlua = { version = "0.7.3", features = ["lua54", "serialize", "module"], optional=true }
# smartstring = { version = "0.2.7", default-features = false }
# nohash-hasher = "0.2.0"
# R-tree data structure.
# spade = "1.8.2"
petgraph = { version = "0.6.0", default-features = false }
rand = "0.8.5"
# vlfeat = { path = "deps/vlfeat", optional=true }
vlfeat = { path = "deps/vlfeat" }
smallvec="1.10.0"
rangetools = "0.1.3"

# euclid = "0.2.6"

[features]
default = ["mkl", "ipp"]
mkl=[]
# gsl=[]
ipp=[]
# opencvlib=[]
# vlfeatlib=[]
# processor=[]

# Contains: rhai Module name, Function entry point, rhai version, and features the
# crate should be compiled with.
[package.metadata.rhai]
name="shutter"
module="shutter::module"
types=["image::ImageBuf<u8>"]
version="1.12.0"
features=[]

